Tidy up ptest